--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
-        with: 100%;
+        width: 100%;
       }
 
       .project .div {
