--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
       .project .november-april {
         position: absolute;
-        top: 48px;
+        top: 28px;
         left: 378px;
         font-family: "Raleway-Bold", Helvetica;
         font-weight: 500;
@@ -595,80 +595,6 @@
         left: 716px;
         object-fit: cover;
       }
-
-      .project .group-5 {
-        position: absolute;
-        width: 167px;
-        height: 30px;
-        top: 4123px;
-        left: 983px;
-      }
-
-      .project .text-wrapper-21 {
-        position: absolute;
-        top: 2px;
-        left: 0;
-        font-family: "Raleway-SemiBold", Helvetica;
-        font-weight: 600;
-        color: #adadad;
-        font-size: 20px;
-        letter-spacing: 0;
-        line-height: 28px;
-        white-space: nowrap;
-      }
-
-      .project .arrow-upward {
-        position: absolute;
-        width: 30px;
-        height: 30px;
-        top: 0;
-        left: 135px;
-      }
-
-      .project .overlap-group-wrapper {
-        position: fixed;
-        width: 60px;
-        height: 60px;
-        top: 118px;
-        left: 132px;
-        transform: rotate(-180.00deg);
-        box-shadow: 0px 4px 8px #00000040;
-      }
-
-      .project .overlap-group {
-        position: relative;
-        height: 60px;
-        border-radius: 30px;
-      }
-
-      .project .vector {
-        position: absolute;
-        width: 60px;
-        height: 60px;
-        top: 0;
-        left: 0;
-        background-color: #ffffff;
-        border-radius: 30px;
-        transform: rotate(180.00deg);
-      }
-
-      .project .vector-2 {
-        width: 14px;
-        height: 23px;
-        top: 18px;
-        left: 29px;
-        position: absolute;
-        transform: rotate(180.00deg);
-      }
-
-      .project .vector-3 {
-        width: 26px;
-        height: 3px;
-        top: 28px;
-        left: 15px;
-        position: absolute;
-        transform: rotate(180.00deg);
-      }
     </style>
 
   </head>
@@ -688,7 +614,7 @@
           <div class="navbar-brand"></div>
           <div class="navbar-brand-2"></div>
         </div>
-        <div class="image-wrapper"><img class="image" src="img/image-2-2.png" /></div>
+        <div class="image-wrapper"><img class="image" src="landing img.png" /></div>
         <div class="group-2">
           <div class="ROLE">Role</div>
           <div class="TIMELINE">Timeline</div>
@@ -700,8 +626,8 @@
           <div class="text-wrapper-3">Polar Art Design Team</div>
         </div>
         <p class="p">Design Visual Graphics @ Polar Art Studio</p>
-        <img class="line" src="img/line-8.svg" />
-        <img class="img" src="img/image-2.png" />
+        <img class="line" src="line.svg" />
+        <img class="img" src="studio img.png" />
         <div class="text-wrapper-4">Sample Work</div>
         <div class="text-wrapper-5">Cross-Functional Team Collaboration</div>
         <div class="text-wrapper-6">Key Takeaways</div>
@@ -713,7 +639,7 @@
               Team, I created infographics, posters, class schedules, and marketing campaigns to establish the brand
               identity and support the company&#39;s growth.</span>
           </p>
-          <img class="image-2" src="img/image-6.png" />
+          <img class="image-2" src="logo.png" />
         </div>
         <p class="text-wrapper-9">
           Most illustrations are created on digital drawing tablets, with layout and design details crafted in Figma and
@@ -734,53 +660,42 @@
         <p class="balancing-visual">
           <span class="text-wrapper-10">Balancing Visual Design with Message</span>
           <span class="text-wrapper-11"> Clarity<br /></span>
-          <span class="text-wrapper-12">While captivating visuals are essential for grabbin</span>
-          <span class="text-wrapper-13">g users&#39; attention, they should not come at the expense of clarity. It&#39;s easy to get carried away
+          <span class="text-wrapper-12">While captivating visuals are essential for grabbing</span>
+          <span class="text-wrapper-13">users&#39; attention, they should not come at the expense of clarity. It&#39;s easy to get carried away
             with design elements, but prioritizing message clarity helps maintain focus and prevents users from feeling
             overwhelmed or distracted.<br /><br /></span>
           <span class="text-wrapper-10">Building the Habit of Asking “</span>
           <span class="text-wrapper-11">Why” Behind Every Element<br /></span>
-          <span class="text-wrapper-12">One crucial lesson I’ve learned is that mar</span>
-          <span class="text-wrapper-13">keting design is not simply about making things look attractive — it’s about designing with a purpose. Each
+          <span class="text-wrapper-12">One crucial lesson I’ve learned is that</span>
+          <span class="text-wrapper-13">marketing design is not simply about making things look attractive — it’s about designing with a purpose. Each
             element within a design should serve a specific function. To foster this mindset, it is a good habit to ask
             why each part of the design exists: Does it support the message? Is it essential? This approach not only
             prevents clutter but also ensures each component guides the users toward the desired outcome.<br /><br /></span>
-          <span class="text-wrapper-10">Designing for the T</span>
-          <span class="text-wrapper-11">arget Audience<br /></span>
-          <span class="text-wrapper-12">Creating designs that reso</span>
-          <span class="text-wrapper-13">nate with the target audience is key to effective communication. When working on infographics for art
+          <span class="text-wrapper-10">Designing for the</span>
+          <span class="text-wrapper-11">Target Audience<br /></span>
+          <span class="text-wrapper-12">Creating designs that</span>
+          <span class="text-wrapper-13">resonate with the target audience is key to effective communication. When working on infographics for art
             classes aimed at children, I tailored the visual style to be child-friendly, using themes and colours that
             convey warmth and approachability. This helped create a welcoming atmosphere that appeals to young learners,
             making the content more relatable and engaging.</span>
         </p>
-        <img class="element" src="img/image.png" />
-        <img class="element-2" src="img/2-1.png" />
-        <img class="element-3" src="img/1-2.png" />
-        <img class="birthday-party" src="img/birthday-party-1.png" />
-        <img class="element-4" src="img/1.png" />
+        <img class="element" src="poster1.png" />
+        <img class="element-2" src="poster3.png" />
+        <img class="element-3" src="poster6.png" />
+        <img class="birthday-party" src="poster4.png" />
+        <img class="element-4" src="poster2.png" />
         <div class="text-wrapper-14">Summer Camp Registration Poster</div>
         <div class="text-wrapper-15">Volunteers Needed Poster</div>
         <p class="text-wrapper-16">Sample Event Related Theme Posters</p>
-        <img class="volunteer-poster" src="img/volunteer-poster-2.png" />
+        <img class="volunteer-poster" src="poster5.png" />
         <div class="text-wrapper-17">Classes Offered For Adults</div>
         <div class="text-wrapper-18">Birthday Party Booking Guide</div>
         <div class="text-wrapper-19">Classes Offered For Children</div>
         <p class="text-wrapper-20">Class Schedule for Summer Camp</p>
         <div class="group-4">
-          <img class="element-5" src="img/1-1.png" />
-          <img class="element-6" src="img/3-1.png" />
-          <img class="element-7" src="img/7-1.png" />
-        </div>
-        <div class="group-5">
-          <div class="text-wrapper-21">BACK TO TOP</div>
-          <img class="arrow-upward" src="img/arrow-upward-24dp-000000-fill0-wght400-grad0-opsz24-1.svg" />
-        </div>
-        <div class="overlap-group-wrapper">
-          <div class="overlap-group">
-            <div class="vector"></div>
-            <img class="vector-2" src="img/vector.svg" />
-            <img class="vector-3" src="img/image.svg" />
-          </div>
+          <img class="element-5" src="poster7.png" />
+          <img class="element-6" src="poster8.png" />
+          <img class="element-7" src="poster9.png" />
         </div>
       </div>
     </div>
