--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       .project .div {
         background-color: #fffcf9;
         width: 1280px;
-        height: 4280px;
+        height: 4200px;
         position: relative;
       }
 
@@ -458,7 +458,7 @@
         position: absolute;
         width: 259px;
         height: 24px;
-        top: 1990px;
+        top: 2000px;
         left: 510px;
         font-family: "Raleway-Medium", Helvetica;
         font-weight: 500;
@@ -472,7 +472,7 @@
         position: absolute;
         width: 198px;
         height: 24px;
-        top: 2496px;
+        top: 2504px;
         left: 541px;
         font-family: "Raleway-Medium", Helvetica;
         font-weight: 500;
@@ -509,7 +509,7 @@
         position: absolute;
         width: 197px;
         height: 24px;
-        top: 1990px;
+        top: 2000px;
         left: 186px;
         font-family: "Raleway-Medium", Helvetica;
         font-weight: 500;
@@ -523,7 +523,7 @@
         position: absolute;
         width: 219px;
         height: 24px;
-        top: 2496px;
+        top: 2504px;
         left: 172px;
         font-family: "Raleway-Medium", Helvetica;
         font-weight: 500;
@@ -537,7 +537,7 @@
         position: absolute;
         width: 213px;
         height: 24px;
-        top: 1990px;
+        top: 2000px;
         left: 894px;
         font-family: "Raleway-Medium", Helvetica;
         font-weight: 500;
@@ -551,7 +551,7 @@
         position: absolute;
         width: 256px;
         height: 24px;
-        top: 2496px;
+        top: 2490px;
         left: 870px;
         font-family: "Raleway-Medium", Helvetica;
         font-weight: 500;
@@ -606,9 +606,9 @@
         <div class="navbar-logo-left">
           <div class="group">
             <div class="frame">
-              <div class="text-wrapper">Projects</div>
-              <div class="text-wrapper-2">About</div>
-              <div class="contact">Resume</div>
+              <a href="https://casey-syx.github.io/Shen_Casey_a3/" class="text-wrapper">Projects</a>
+              <a href="https://casey-syx.github.io/about/" class="text-wrapper-2">About</a>
+              <a href="https://drive.google.com/file/d/1TAWB7Vy6SAjhWK837kHkPMTjnkCfBxo-/view?usp=drive_link" class="contact">Resume</a>
             </div>
           </div>
           <div class="navbar-brand"></div>
